VSO Build Publish Nightly

--- a/src/NuGet.config
+++ b/src/NuGet.config
@@ -6,6 +6,7 @@
     <add key="repositoryPath" value="..\packages" />
   </config>
   <packageSources>
+    <clear />
     <add key="myget.org dotnet-core" value="https://dotnet.myget.org/F/dotnet-core/api/v2" />
     <add key="myget.org dotnet-corert" value="https://dotnet.myget.org/F/dotnet-corert/api/v2" />
     <add key="myget.org dotnet-corefxtestdata" value="https://dotnet.myget.org/F/dotnet-corefxtestdata/api/v2" />
